Fix SeExpr scripts' inconsistent state on reload or rename

On reload, SeExpr presets override the name set to them by the resource system.

Implement the changes made by Halla in
88e48c58ed576b946dbc49ce0fa00e2dcb24afbd for SeExpr presets.

BUG: 445048